@@ -131,6 +131,8 @@ func (l *Line) advance() error {
 	sz, err := l.decode(idx + len(l.nl))
 	if err != nil {
 		logp.Err("Error decoding line: %s", err)
+		// In case of error increase size by unencoded length
+		sz = idx + len(l.nl)
 	}
 
 	// consume transformed bytes from input buffer
@@ -157,19 +159,20 @@ func (l *Line) decode(end int) (int, error) {
 		var nDst, nSrc int
 
 		nDst, nSrc, err = l.decoder.Transform(buffer, inBytes[start:end], false)
+		if err != nil {
+			// Check if error is different from destination buffer too short
+			if err != transform.ErrShortDst {
+				l.outBuffer.Write(inBytes[0:end])
+				start = end
+				break
+			}
+
+			// Reset error as decoding continues
+			err = nil
+		}
 
 		start += nSrc
-
 		l.outBuffer.Write(buffer[:nDst])
-
-		if err != nil {
-			if err == transform.ErrShortDst { // continue transforming
-				// Reset error as decoding continues
-				err = nil
-				continue
-			}
-			break
-		}
 	}
 
 	l.byteCount += start
