@@ -38,6 +38,7 @@ https://github.com/elastic/beats/compare/v5.0.0-beta1...master[Check the HEAD di
 *Topbeat*
 
 *Filebeat*
+- Fix input buffer on encoding problem
 
 *Winlogbeat*
 
